# circuit-dawg

./: .gitignore  .travis.yml  LICENSE  README.md  _prepare_dev_data.py  bench.ini  dictionary.dawg  pyproject.toml  report.md  requirements-dev.txt  setup.py  tox.ini  trying.py
.github/workflows/: release.yml  test.yml
bench/: speed.py  utils.py
circuit_dawg/: __init__.py  dawgs.py  units.py  wrapper.py
dawg_python/: __init__.py  dawgs.py  units.py  wrapper.py
scripts/: generate_fixtures.py  test_parity.py
tests/: small_dict.dawg  test_bytes_dawg.py  test_completion_dawg.py  test_context_manager.py  test_dawg.py  test_dictionary.py  test_filepointer.py  test_fuzzy.py  test_guide.py  test_memory.py  test_payload_dawg.py  test_prediction.py  test_record_dawg.py  utils.py
tests/fixtures/: completion-large.dawg  dawg.dawg  long-keys.dawg  shared-prefixes.dawg  single-chars.dawg  unicode.dawg
