[project]
name = "circuit-dawg"
version = "1.1.0"
description = "A pure-Python package for reading DAWG files, optimized for use with CircuitPython and microcontrollers."
authors = [
    {name = "Karey Higuera", email = "karey.higuera@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["CircuitPython", "DAWG", "DAFSA", "word list"]

[project.urls]
Homepage = "https://github.com/kbravh/circuit-dawg/"
Repository = "https://github.com/kbravh/circuit-dawg/"
Issues = "https://github.com/kbravh/circuit-dawg/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
markers = [
    "memory: marks tests that profile memory usage (deselect with '-m \"not memory\"')",
]
